--- a/style.css
+++ b/style.css
@@ -60,28 +60,52 @@ a {
         padding: 0.3em;
         left:-1.3em;
     }
-}
+    #greedy:target .lg {
+        display: block;
+        position: absolute;
+        background-color: #fff;
+        width: 1.5em;
+        height: 1.5em;
+        border: 1px solid #222;
+    }
+    #greedy:target .lg:nth-child(8) {
+            top: 7.9em;
+    }
+    #greedy:target .lg:nth-child(9) {
+            top: 11.4em;
+    }
+    }
 @media (max-width: 900px) {
     .greedy-nav ul .md {
         display: none;
     }
     .greedy-nav ul .burger {
         display: table-cell; 
-        position: relative;     
+        position: relative;  
     }
     .greedy-nav ul .burger::before {
         content: "4";
-        color: white;
-        background-color: #555;
-        border: 2px solid white;
-        border-radius: 100%;
-        position: absolute;
+    }
+    #greedy:target .lg,
+    #greedy:target .md {
         display: block;
+        position: absolute;
+        background-color:#fff;
         width: 1.5em;
         height: 1.5em;
-        text-align: center;
-        padding: 0.3em;
-        left:-1.3em;
+        border: 1px solid #222;
+    }
+    #greedy:target .md:nth-child(6) {
+        top:7.9em;
+    }
+    #greedy:target .md:nth-child(7) {
+        top: 11.4em;
+    }
+    #greedy:target .lg:nth-child(8) {
+        top: 14.9em;
+    }
+    #greedy:target .lg:nth-child(9) {
+        top: 18.4em;
     }
 }
 @media (max-width: 750px) {
@@ -93,17 +117,34 @@ a {
         position: relative;     
     }
     .greedy-nav ul .burger::before {
-        content: "6";
-        color: white;
-        background-color: #555;
-        border: 2px solid white;
-        border-radius: 100%;
-        position: absolute;
+        content: "6";   
+    }
+    #greedy:target .lg,
+    #greedy:target .md,
+    #greedy:target .sm {
         display: block;
+        position: absolute;
+        background-color: #fff;
         width: 1.5em;
         height: 1.5em;
-        text-align: center;
-        padding: 0.3em;
-        left:-1.3em;
+        border: 1px solid #222;   
+    }
+    #greedy:target .sm:nth-child(4){
+        top:7.9em;
+    }
+    #greedy:target .sm:nth-child(5) {
+        top: 11.4em;
+    }
+    #greedy:target .md:nth-child(6) {
+        top:14.9em;
+    }
+    #greedy:target .md:nth-child(7) {
+        top: 18.4em;
+    }
+    #greedy:target .lg:nth-child(8) {
+        top: 21.7em;
+    }
+    #greedy:target .lg:nth-child(9) {
+        top: 25.3em;
     }
 }
